0.05 2018-??-??
-bugfix: define cxinc as Perl_cxinc when not defined in perls w/ MULTICALL_PUSH bug

0.04 2018-07-25
-Switch to vanilla XS
-Switch to ExtUtils::MakeMaker

0.03 2018-03-28
-Inline config to make initialization friendly for distribution

0.02 2018-03-20
-new: put() accepts multiple values
-bugfix: remove unused struct member
-bugfix: support anonymous sub in constructor

0.01 2018-03-20
-Initial release