@@ -1,5 +1,7 @@
 0.05 2018-??-??
 -bugfix: define cxinc as Perl_cxinc when not defined in perls w/ MULTICALL_PUSH bug
+-feature: to_array() returns unordered array ref of values in the heap
+-feature: explain() generates a string describing the structure of the tree
 
 0.04 2018-07-25
 -Switch to vanilla XS
